Fixed Fullscreen White Space

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .header-color {
   background: #833ab4;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  /* Chrome 10-25, Safari 5.1-6 */
@@ -17,6 +18,7 @@
 
 .projects-grid {
   display: flex;
+  height: 100%;
 }
 
 /* Resume Page css */
